[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/images/menu.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/QuitGame.gd" type="Script" id=2]

[node name="UIQuitGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -110.0
margin_right = 203.5
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.345098, 0.345098, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 387.0
margin_bottom = 200.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 367.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 331.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
text = "warning"
align = 1
valign = 1

[node name="Close" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 335.0
margin_top = 8.0
margin_right = 367.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
flat = true

[node name="Close" type="Sprite" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/Close"]
modulate = Color( 0.882353, 0.415686, 0.415686, 1 )
position = Vector2( 16, 16 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 97.2634, 13.194, 39.816, 41.5224 )

[node name="Control" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 367.0
margin_bottom = 144.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/Control"]
margin_left = 116.0
margin_top = 37.0
margin_right = 251.0
margin_bottom = 54.0
text = "quit_the_game"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 367.0
margin_bottom = 180.0
alignment = 1

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
text = "quit"
flat = true

[node name="Cancel" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 226.0
margin_right = 326.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
text = "cancel"
flat = true

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
